knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective_Opportunity__c/pqcrush__Objective_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Objective Opportunity</label>
    <nameField>
        <displayFormat>OO-{0000}</displayFormat>
        <label>Objective Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objective Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>