knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective_Opportunity__c/fields/pqcrush__Objective__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Objective__c</fullName>
    <label>Objective</label>
    <referenceTo>pqcrush__Objective__c</referenceTo>
    <relationshipLabel>Objective Opportunities</relationshipLabel>
    <relationshipName>Objective_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>