knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective_Opportunity__c/fields/pqcrush__Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Objective_Name__c</fullName>
    <formula>pqcrush__Objective__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Name</label>
    <type>Text</type>
</CustomField>