knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective_Opportunity__c/fields/pqcrush__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Objective Opportunities</relationshipLabel>
    <relationshipName>Objective_Opportunities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>