knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Objective_Opportunity__c/validationRules/pqcrush__Matching_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Matching_Accounts</fullName>
    <active>false</active>
    <errorConditionFormula>pqcrush__Objective__r.pqcrush__Account_Plan__r.pqcrush__Account__c !=  pqcrush__Opportunity__r.AccountId</errorConditionFormula>
    <errorMessage>Account must match on Account Plan linked to Objective and the Opportunity</errorMessage>
</ValidationRule>